fixed place height issue on safari

--- a/src/components/Place/Place.css
+++ b/src/components/Place/Place.css
@@ -24,11 +24,11 @@
     /* min-height: 400px; */
     width: 45%;
     min-width: 230px;
-    align-items: center;
+    /* align-items: center; */
     /* background: rgb(22, 40, 89); */
     background: rgb(1, 17, 58);
-    display: flex;
-    flex-direction: column;
+    /* display: flex; */
+    /* flex-direction: column; */
     font-family: 'Judson', serif;
 }
 
@@ -59,6 +59,7 @@ section {
 
 #notes {
     width: 80%;
+    margin: 10px auto;
 }
 
 button:hover {
@@ -78,6 +79,7 @@ button:hover {
     display: block;
     font-family: 'Judson', serif;
     color: navy;
+    margin: 5px auto;
 }
 
 .hh {
